css/theming.scss
header#header { height: 64px !important; }
body > #content,
body > #content-vue {
	padding-top: 64px;
}
#app-navigation,
#app-navigation-vue {
	top: 64px !important;
}

/* fix dashboard header */
body.dashboard--inverted:not(.dashboard--dark) {
	#appmenu .icon-more-white,
	.header-right > div:not(#settings) > :first-child {
		filter: unset !important;
	}
}

header#header {
	background-color: white !important;
	border-bottom: 1px solid #dddddd;

	.header-right {
		.icon-contacts {
			background-image: var(--icon-contacts-000);
			opacity: 1 !important;
		}
		#contactsmenu {
			opacity: .88 !important;
			.content .footer {
				display: none !important;
			}
		}
		> div:hover {
			background-color: rgba(0, 0, 0, 0.1);
		}
		.notifications .notifications-button {
			background: url('../img/notifications-dark.svg') no-repeat center !important;
			background-size: 20px !important;
			opacity: .865 !important;
			img {
				display: none;
			}
		}
		#unified-search {
			> a {
				opacity: 1 !important;
			}
			svg {
				fill: #1f1f1f;
			}
		}
	}

	.header-left > nav > #navigation {
		position: fixed;
		left: 12px;
		top: 64px;
		transform: unset;
		min-width: 260px;
		max-width: 420px;
		width: max-content;
		/* Hide triangle on active app and dropdown menu */
		&:after {
			display: none !important;
		}
	}
}


@media (max-width:600px) {
	#header .header-left > nav > #navigation {
		width: 100%;
		max-width: 600px;
	}
}

#appmenu {
	width: 40px;
	min-width: 40px;
	> li[tabindex="-1"] {
		display: none;
	}
	> li#more-apps {
		display: flex !important;
		width: 40px;
		padding: 0;
		a {
			div {
				transform: unset !important;
			}
			span {
				display: none !important;
			}
		}
	}
	li a {
		opacity: unset;
		height: 63px;
		&:hover {
			background-color: rgba(0, 0, 0, 0.1);
		}
	}
	/* Hide triangle on active app and dropdown menu */
	li a.active::before,
	li:hover a::before,
	li:hover a.active::before,
	li a:focus::before {
		display: none !important;
	}
}

#apps {
	/* set style of categories and custom items */
	> ul {
		padding: 12px 0 12px 0;
		overflow-y: unset !important;
		li {
			display: list-item !important;
			&.in-header > a {
				padding: 12px 16px 12px 16px !important;
				min-height: 44px !important;
				height: unset !important;
			}
			&.elementcontainer {
				font-size: 15px;
				> a:hover {
					/*background: var(--color-primary) !important;*/
					background-color: rgba(0, 0, 0, 0.1) !important;
				}
			}
			span {
				line-height: 20px;
				max-width: unset !important;
				white-space: pre-wrap !important;
				overflow: unset !important;
				text-overflow: unset !important;
				color: #1f1f1f !important;
			}
			img {
				width: 20px !important;
				height: 20px !important;
				margin-right: 16px !important;
				opacity: 1 !important;
			}
			.icon-loading-small {
				display: none;
			}
			.category {
				font-weight: bold;
				font-size: 17px;
				/*color: #f1f1f1;*/
				/*color: #1f1f1f;*/
				display: inline-flex;
				padding: 8px 16px 4px 16px;
			}
		}
	}
}

.icon-more-white {
	background-color: #1f1f1f;
	/* background-image: url('../img/grid.svg') !important; */
	background-image: unset !important;
	-webkit-mask: url('../img/grid.svg') no-repeat 50% 50%;
	mask: url('../img/grid.svg') no-repeat 50% 50%;
	background-size: 20px;
}

#nextcloud {
	padding-left: 128px;
	.logo {
		width: 80px;
		height: 63px;
		margin: 0 24px 0 24px;
		left: 0;
		top: 0;
	}
}

div[role=tooltip] {
	top: 50px !important;
}

/* hide call button in Files sidebar */
#call_button {
	display: none;
}

